# HikRobot-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/hikrobot/: Cargo.toml
crates/hikrobot-sys/: Cargo.toml  MvCamera.h  build.rs
crates/hikrobot/examples/: camera.rs  device.rs  system.rs
crates/hikrobot/src/: camera.rs  device.rs  error.rs  lib.rs  system.rs
docs/rust-sdk/: camera.md  device.md  error.md  system.md
