[workspace]
members = [
    "crates/hikrobot",
    "crates/hikrobot-sys",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust wrapper for HikRobot MVS camera SDK"
repository = "https://github.com/xiaoze-cn/HikRobot-Rust"
readme = "README.md"
keywords = ["hikrobot", "mvs", "camera", "sdk"]
categories = ["api-bindings", "computer-vision"]
