[package]
name = "hikrobot-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
links = "MvCameraControl"
build = "build.rs"

[dependencies]

[build-dependencies]
bindgen = "0.72"
